@@ -5488,12 +5488,12 @@ records_value=Value
 records_delete=Delete Selected Records
 records_add=Create Record of Type:
 records_evalid=Warning - errors were found in this domain's DNS records : $1
-records_evaluea=Value must be an IPv4 address
 records_derr=Failed to delete records
 records_enone=None selected
 records_return=DNS records
 records_typea=IPv4 Address
 records_valuea=IPv4 address
+records_evaluea=Value must be an IPv4 address
 records_typeaaaa=IPv6 Address
 records_valueaaaa=IPv6 address
 records_evalueaaaa=Invalid IPv6 address
@@ -5515,6 +5515,9 @@ records_typesoa=Start Of Domain
 records_typespf=Sender Permitted From
 records_typedefttl=Default Cache Time
 records_typegenerate=Record Generator
+records_typeptr=Reverse Address
+records_valueptr=Reverse address
+records_evalueptr=Value must be an DNS name and end with a dot
 records_comment=Comment
 records_manual=Manually Edit Records
 
